--- a/app/src/main/res/layout/content_additem.xml
+++ b/app/src/main/res/layout/content_additem.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:maxWidth="300dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
@@ -24,6 +28,7 @@
                 android:id="@+id/nameEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:ems="10"
                 android:inputType="textPersonName" />
         </TableRow>
