--- a/app/src/main/res/menu/menu_view_list.xml
+++ b/app/src/main/res/menu/menu_view_list.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.shopperdwan.ViewList">
     <item
+        android:id="@+id/deleteList"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/delete_list"
+        app:showAsAction="always"
+        android:onClick="deleteList"
+        />
+    <item
         android:id="@+id/action_home"
         android:orderInCategory="1"
         android:title="@string/action_home"
